--- a/.github/workflows/dependecyUpdates.yml
+++ b/.github/workflows/dependecyUpdates.yml
@@ -41,7 +41,7 @@ jobs:
 
       # Run dependencyUpdates task
       - name: Run dependencyUpdates task
-        uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
+        uses: gradle/gradle-build-action@v2.1.4
         with:
           arguments: --no-daemon --refresh-dependencies dependencyUpdates
 
