--- a/.github/workflows/gradleBuild.yml
+++ b/.github/workflows/gradleBuild.yml
@@ -58,6 +58,6 @@ jobs:
 
       # Run check tasks
       - name: Run check tasks
-        uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
+        uses: gradle/gradle-build-action@v2.1.4
         with:
           arguments: --no-daemon --warning-mode all check
