--- a/.github/workflows/gradleBuild.yml
+++ b/.github/workflows/gradleBuild.yml
@@ -52,7 +52,7 @@ jobs:
 
       # Run test tasks
       - name: Run test tasks
-        uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
+        uses: gradle/gradle-build-action@v2.1.4
         with:
           arguments: --no-daemon --warning-mode all test
 
