Reset spotless.ignoreFailures to false and set to true where currently required

--- a/2d/build.gradle
+++ b/2d/build.gradle
@@ -27,3 +27,5 @@ dependencies {
     implementation project(':tweetwallfx-configuration')
     implementation project(':tweetwallfx-controls')
 }
+
+tasks.named('spotbugsMain') { ignoreFailures = true }
