--- a/devoxx-api-cfp/build.gradle
+++ b/devoxx-api-cfp/build.gradle
@@ -32,3 +32,5 @@ dependencies {
     runtimeOnly group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '3.0.4'
     runtimeOnly group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '3.0.4'
 }
+
+tasks.named('spotbugsMain') { ignoreFailures = true }
