--- a/filterchain/build.gradle
+++ b/filterchain/build.gradle
@@ -27,3 +27,5 @@ dependencies {
 
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
 }
+
+tasks.named('spotbugsMain') { ignoreFailures = true }
