--- a/google-cloud/build.gradle
+++ b/google-cloud/build.gradle
@@ -31,3 +31,5 @@ dependencies {
     implementation project(':tweetwallfx-filterchain')
     implementation project(':tweetwallfx-tweet-api')
 }
+
+tasks.named('spotbugsMain') { ignoreFailures = true }
