--- a/stepengine-api/build.gradle
+++ b/stepengine-api/build.gradle
@@ -28,3 +28,5 @@ dependencies {
 
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
 }
+
+tasks.named('spotbugsMain') { ignoreFailures = true }
