--- a/util/build.gradle
+++ b/util/build.gradle
@@ -23,8 +23,6 @@
  */
 
 dependencies {
-    implementation group: 'jakarta.json.bind', name: 'jakarta.json.bind-api', version: '2.0.0'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
-
-    runtimeOnly group: 'org.eclipse', name: 'yasson', version: '2.0.4'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.2'
 }
