--- a/build.gradle
+++ b/build.gradle
@@ -71,12 +71,12 @@ allprojects {
 
     afterEvaluate {
         spotless {
-//            if (!System.env.CI) {
-//                // https://docs.github.com/en/actions/learn-github-actions/environment-variables#default-environment-variables
-//                // only format files which have changed since this ref
-//                // TODO: Figure out a way to get this working in CI (i.e. Github Workflows)
-//                ratchetFrom 'origin/master'
-//            }
+            if (!System.env.CI) {
+                // https://docs.github.com/en/actions/learn-github-actions/environment-variables#default-environment-variables
+                // only format files which have changed since this ref
+                // TODO: Figure out a way to get this working in CI (i.e. Github Workflows)
+                ratchetFrom 'origin/master'
+            }
 
             format 'textBasedFiles', {
                 target(
@@ -106,9 +106,11 @@ allprojects {
 //                    'javax',  // classes from javax root package
 //                    '',       // any other import
 //                )
-                custom('noStarImports', {fileContent -> fileContent.replaceAll(/\nimport (static )?[a-zA-Z0-9.]*[.][\*];\n/, '\n')})
-                custom('noMultipleEmptyLines', {fileContent -> fileContent.replaceAll('\n{3,}', '\n\n')})
-                custom('noEmptyLineBeforeClosingBrace', {fileContent -> fileContent.replaceAll(/\n+(\n *[\}])/, '$1')})
+                replaceRegex 'noStarImports', /\nimport (static )?[a-zA-Z0-9.]*[.][\*];\n/, '\n'
+                replaceRegex 'noMultipleEmptyLines', '\n{3,}', '\n\n'
+                replaceRegex 'Remove @author javadoc taglets.', '\n\\s*\\*\\s*@author.*', ''
+                replaceRegex 'Remove trailing empty comment lines.', '\n\\s*\\*(\n\\s*\\*/\n)', '$1'
+                replaceRegex 'Remove empty lines before end of block', '\\n[\\n]+(\\s*})(?=\\n)', '\n$1'
                 licenseHeaderFile rootProject.file('LICENSE.spotlessTemplate')
             }
 
