--- a/.github/workflows/gradleBuild.yml
+++ b/.github/workflows/gradleBuild.yml
@@ -19,7 +19,7 @@ on:
 
 jobs:
   build:
-    name: Build with JDK ${{ matrix.jdk }}
+    name: Build with ${{ matrix.distribution }} JDK ${{ matrix.jdk }}
     runs-on: ubuntu-latest
 
     strategy:
@@ -28,6 +28,8 @@ jobs:
           - '17'
           - '18'
           - '19-ea'
+        distribution:
+          - 'zulu'
 
     steps:
       # Check out sources
@@ -39,10 +41,10 @@ jobs:
         uses: gradle/wrapper-validation-action@v1.0.4
 
       # Setup JDK environment for the next steps
-      - name: Setup JDK ${{ matrix.jdk }}
+      - name: Setup ${{ matrix.distribution }} JDK ${{ matrix.jdk }}
         uses: actions/setup-java@v3
         with:
-          distribution: 'zulu'
+          distribution: ${{ matrix.distribution }}
           java-version: ${{ matrix.jdk }}
           cache: gradle
 
