Turned ImageContentAnalysis POJOs and StepConfig into serializable records

--- a/google-cloud/build.gradle
+++ b/google-cloud/build.gradle
@@ -32,4 +32,4 @@ dependencies {
     implementation project(':tweetwallfx-tweet-api')
 }
 
-tasks.named('spotbugsMain') { ignoreFailures = true }
+//tasks.named('spotbugsMain') { ignoreFailures = true }
