--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,6 +15,8 @@ updates:
       interval: "daily"
       # Check for npm updates at 0815hrs UTC
       time: "08:15"
+    reviewers:
+       - "TweetWallFX/tweetwallfx-admins"
     # Allow up to N open pull requests (independant of source)
     open-pull-requests-limit: 50
 
@@ -27,6 +29,8 @@ updates:
       interval: "daily"
       # Check for npm updates at 0815hrs UTC
       time: "08:15"
+    reviewers:
+       - "TweetWallFX/tweetwallfx-admins"
     # Allow up to N open pull requests (independant of source)
     open-pull-requests-limit: 50
 
@@ -39,6 +43,8 @@ updates:
       interval: "daily"
       # Check for npm updates at 0815hrs UTC
       time: "08:15"
+    reviewers:
+       - "TweetWallFX/tweetwallfx-admins"
     # Allow up to N open pull requests (independant of source)
     open-pull-requests-limit: 50
 
@@ -51,6 +57,8 @@ updates:
       interval: "daily"
       # Check for npm updates at 0815hrs UTC
       time: "08:15"
+    reviewers:
+       - "TweetWallFX/tweetwallfx-admins"
     # Allow up to N open pull requests (independant of source)
     open-pull-requests-limit: 50
 
@@ -63,6 +71,8 @@ updates:
       interval: "daily"
       # Check for npm updates at 0815hrs UTC
       time: "08:15"
+    reviewers:
+       - "TweetWallFX/tweetwallfx-admins"
     # Allow up to N open pull requests (independant of source)
     open-pull-requests-limit: 50
 
@@ -75,6 +85,8 @@ updates:
       interval: "daily"
       # Check for npm updates at 0815hrs UTC
       time: "08:15"
+    reviewers:
+       - "TweetWallFX/tweetwallfx-admins"
     # Allow up to N open pull requests (independant of source)
     open-pull-requests-limit: 50
 
@@ -87,6 +99,8 @@ updates:
       interval: "daily"
       # Check for npm updates at 0815hrs UTC
       time: "08:15"
+    reviewers:
+       - "TweetWallFX/tweetwallfx-admins"
     # Allow up to N open pull requests (independant of source)
     open-pull-requests-limit: 50
 
@@ -99,6 +113,8 @@ updates:
       interval: "daily"
       # Check for npm updates at 0815hrs UTC
       time: "08:15"
+    reviewers:
+       - "TweetWallFX/tweetwallfx-admins"
     # Allow up to N open pull requests (independant of source)
     open-pull-requests-limit: 50
 
@@ -111,6 +127,8 @@ updates:
       interval: "daily"
       # Check for npm updates at 0815hrs UTC
       time: "08:15"
+    reviewers:
+       - "TweetWallFX/tweetwallfx-admins"
     # Allow up to N open pull requests (independant of source)
     open-pull-requests-limit: 50
 
@@ -123,6 +141,8 @@ updates:
       interval: "daily"
       # Check for npm updates at 0815hrs UTC
       time: "08:15"
+    reviewers:
+       - "TweetWallFX/tweetwallfx-admins"
     # Allow up to N open pull requests (independant of source)
     open-pull-requests-limit: 50
 
@@ -135,6 +155,8 @@ updates:
       interval: "daily"
       # Check for npm updates at 0815hrs UTC
       time: "08:15"
+    reviewers:
+       - "TweetWallFX/tweetwallfx-admins"
     # Allow up to N open pull requests (independant of source)
     open-pull-requests-limit: 50
 
@@ -147,6 +169,8 @@ updates:
       interval: "daily"
       # Check for npm updates at 0815hrs UTC
       time: "08:15"
+    reviewers:
+       - "TweetWallFX/tweetwallfx-admins"
     # Allow up to N open pull requests (independant of source)
     open-pull-requests-limit: 50
 
@@ -159,6 +183,8 @@ updates:
       interval: "daily"
       # Check for npm updates at 0815hrs UTC
       time: "08:15"
+    reviewers:
+       - "TweetWallFX/tweetwallfx-admins"
     # Allow up to N open pull requests (independant of source)
     open-pull-requests-limit: 50
 
@@ -171,6 +197,8 @@ updates:
       interval: "daily"
       # Check for npm updates at 0815hrs UTC
       time: "08:15"
+    reviewers:
+       - "TweetWallFX/tweetwallfx-admins"
     # Allow up to N open pull requests (independant of source)
     open-pull-requests-limit: 50
 
@@ -183,6 +211,8 @@ updates:
       interval: "daily"
       # Check for npm updates at 0815hrs UTC
       time: "08:15"
+    reviewers:
+       - "TweetWallFX/tweetwallfx-admins"
     # Allow up to N open pull requests (independant of source)
     open-pull-requests-limit: 50
 
@@ -195,6 +225,8 @@ updates:
       interval: "daily"
       # Check for npm updates at 0815hrs UTC
       time: "08:15"
+    reviewers:
+       - "TweetWallFX/tweetwallfx-admins"
     # Allow up to N open pull requests (independant of source)
     open-pull-requests-limit: 50
 
@@ -207,6 +239,8 @@ updates:
       interval: "daily"
       # Check for npm updates at 0815hrs UTC
       time: "08:15"
+    reviewers:
+       - "TweetWallFX/tweetwallfx-admins"
     # Allow up to N open pull requests (independant of source)
     open-pull-requests-limit: 50
 
@@ -219,6 +253,8 @@ updates:
       interval: "daily"
       # Check for npm updates at 0815hrs UTC
       time: "08:15"
+    reviewers:
+       - "TweetWallFX/tweetwallfx-admins"
     # Allow up to N open pull requests (independant of source)
     open-pull-requests-limit: 50
 
@@ -231,6 +267,8 @@ updates:
       interval: "daily"
       # Check for npm updates at 0815hrs UTC
       time: "08:15"
+    reviewers:
+       - "TweetWallFX/tweetwallfx-admins"
     # Allow up to N open pull requests (independant of source)
     open-pull-requests-limit: 50
 
@@ -243,6 +281,8 @@ updates:
       interval: "daily"
       # Check for npm updates at 0815hrs UTC
       time: "08:15"
+    reviewers:
+       - "TweetWallFX/tweetwallfx-admins"
     # Allow up to N open pull requests (independant of source)
     open-pull-requests-limit: 50
 
@@ -255,6 +295,8 @@ updates:
       interval: "daily"
       # Check for npm updates at 0815hrs UTC
       time: "08:15"
+    reviewers:
+       - "TweetWallFX/tweetwallfx-admins"
     # Allow up to N open pull requests (independant of source)
     open-pull-requests-limit: 50
 
@@ -267,5 +309,7 @@ updates:
       interval: "daily"
       # Check for npm updates at 0815hrs UTC
       time: "08:15"
+    reviewers:
+       - "TweetWallFX/tweetwallfx-admins"
     # Allow up to N open pull requests (independant of source)
     open-pull-requests-limit: 50
