--- a/build.gradle
+++ b/build.gradle
@@ -27,11 +27,11 @@ plugins {
     id 'build-dashboard'
     id 'com.diffplug.spotless' version '6.5.0'
     id 'com.github.ben-manes.versions' version '0.42.0'
-    id 'com.github.spotbugs' version '5.0.6'
+    id 'com.github.spotbugs' version '5.0.6' apply false
     id 'com.google.osdetector' version '1.7.0'
-    id 'nebula.info-dependencies' version '11.3.3'
-    id 'nebula.maven-nebula-publish' version '18.4.0'
-    id 'net.ltgt.errorprone' version '2.0.2'
+    id 'nebula.info-dependencies' version '11.3.3' apply false
+    id 'nebula.maven-nebula-publish' version '18.4.0' apply false
+    id 'net.ltgt.errorprone' version '2.0.2' apply false
     id 'org.sonarqube' version '3.3'
 }
 
