Fixes default cache config using correct types
Signed-off-by: Patrick Reinhart <patrick@reini.net>

--- a/google-cloud/src/main/resources/tweetwallConfig.json
+++ b/google-cloud/src/main/resources/tweetwallConfig.json
@@ -21,7 +21,8 @@
                 "cacheResources": [
                     {
                         "type": "HEAP",
-                        "amount": 200
+                        "amount": 200,
+                        "unit": "MB"
                     },
                     {
                         "type": "DISK",
