--- a/stepengine-dataproviders/src/main/resources/tweetwallConfig.json
+++ b/stepengine-dataproviders/src/main/resources/tweetwallConfig.json
@@ -13,7 +13,8 @@
                 "cacheResources": [
                     {
                         "type": "HEAP",
-                        "amount": 100
+                        "amount": 100,
+                        "unit": "MB"
                     },
                     {
                         "type": "DISK",
@@ -34,7 +35,8 @@
                 "cacheResources": [
                     {
                         "type": "HEAP",
-                        "amount": 100
+                        "amount": 100,
+                        "unit": "MB"
                     },
                     {
                         "type": "DISK",
