--- a/devoxx-api-cfp/build.gradle
+++ b/devoxx-api-cfp/build.gradle
@@ -23,14 +23,15 @@
  */
 
 dependencies {
-    api group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.1.1'
     api project(':tweetwallfx-utility')
+    api group: 'jakarta.ws.rs', name: 'jakarta.ws.rs-api', version: '3.1.0'
 
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
 
     runtimeOnly group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '3.0.4'
     runtimeOnly group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '3.0.4'
     runtimeOnly group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '3.0.4'
+    runtimeOnly group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.13.2'
 }
 
 tasks.named('spotbugsMain') { ignoreFailures = true }
