--- a/.github/workflows/gradleBuild.yml
+++ b/.github/workflows/gradleBuild.yml
@@ -27,9 +27,12 @@ jobs:
         jdk:
           - '17'
           - '18'
-#          - '19-ea'
+          - '19'
         distribution:
           - 'zulu'
+
+    env:
+      JAVA_PLATFORM_VERSION: ${{ matrix.jdk }}
 
     steps:
       # Check out sources
@@ -41,27 +44,27 @@ jobs:
         uses: gradle/wrapper-validation-action@v1.0.4
 
       # Setup JDK environment for the next steps
-      - name: Setup ${{ matrix.distribution }} JDK ${{ matrix.jdk }}
+      - name: Setup ${{ matrix.distribution }} JDK 17 for gradle
         uses: actions/setup-java@v3
         with:
           distribution: ${{ matrix.distribution }}
-          java-version: ${{ matrix.jdk }}
+          java-version: 17
           cache: gradle
 
       # Run assemble tasks
-      - name: Run assemble tasks
+      - name: Run assemble tasks with toolchain JDK ${{ matrix.jdk }}
         uses: gradle/gradle-build-action@v2
         with:
           arguments: --no-daemon --refresh-dependencies --warning-mode all assemble
 
       # Run test tasks
-      - name: Run test tasks
+      - name: Run test tasks with toolchain JDK ${{ matrix.jdk }}
         uses: gradle/gradle-build-action@v2
         with:
           arguments: --no-daemon --warning-mode all test
 
       # Run check tasks
-      - name: Run check tasks
+      - name: Run check tasks with toolchain JDK ${{ matrix.jdk }}
         uses: gradle/gradle-build-action@v2
         with:
           arguments: --no-daemon --warning-mode all check
