--- a/config/build.gradle
+++ b/config/build.gradle
@@ -28,6 +28,6 @@ dependencies {
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
 }
 
-test {
+tasks.named('test') {
     systemProperty 'org.tweetwall.config.fileName', 'myCustomConfig.json'
 }
