--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ plugins {
 
 ext {
     javaFxPlatform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os
+    javaFxPlatform = osdetector.arch == 'aarch_64' ? javaFxPlatform + '-aarch64' : javaFxPlatform;
 }
 
 allprojects {
