--- a/build.gradle
+++ b/build.gradle
@@ -262,9 +262,10 @@ allprojects {
             gradleReleaseChannel = 'current'
 
             resolutionStrategy {
+                def rejectedQualifierParts = ['alpha', 'beta', 'rc', 'cr', 'm', 'preview', 'b', 'pr', 'ea']
                 componentSelection { rules ->
                     rules.all { ComponentSelection selection ->
-                        boolean rejected = ['alpha', 'beta', 'rc', 'cr', 'm', 'preview', 'b', 'pr', 'ea'].any { qualifier ->
+                        boolean rejected = rejectedQualifierParts.any { qualifier ->
                             selection.candidate.version ==~ /(?i).*[.-]${qualifier}[.\d-+]*/
                         }
                         if (rejected) {
