--- a/.github/workflows/gradleBuild.yml
+++ b/.github/workflows/gradleBuild.yml
@@ -65,3 +65,15 @@ jobs:
         uses: gradle/gradle-build-action@v2.1.7
         with:
           arguments: --no-daemon --warning-mode all check
+
+      # Archive test reports
+      - name: Archive build logs
+        if: always()
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ matrix.distribution }}-jdk${{ matrix.jdk }}-build-logs
+          retention-days: 5
+          path: |
+            **/*.jfr
+            **/hs_err_pid*.log
+            **/build/reports/*
