--- a/2d/build.gradle
+++ b/2d/build.gradle
@@ -23,7 +23,7 @@
  */
 
 dependencies {
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
+    implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
     implementation project(':tweetwallfx-configuration')
     implementation project(':tweetwallfx-controls')
 }
