--- a/build.gradle
+++ b/build.gradle
@@ -152,24 +152,24 @@ allprojects {
         }
 
         dependencies {
-            javafx group: 'org.openjfx', name: 'javafx-base', version: '18.0.1', classifier: javaFxPlatform
-            javafx group: 'org.openjfx', name: 'javafx-graphics', version: '18.0.1', classifier: javaFxPlatform
-            javafx group: 'org.openjfx', name: 'javafx-fxml', version: '18.0.1', classifier: javaFxPlatform
-            javafx group: 'org.openjfx', name: 'javafx-controls', version: '18.0.1', classifier: javaFxPlatform
+            javafx 'org.openjfx:javafx-base:18.0.1:' + javaFxPlatform
+            javafx 'org.openjfx:javafx-graphics:18.0.1:' + javaFxPlatform
+            javafx 'org.openjfx:javafx-fxml:18.0.1:' + javaFxPlatform
+            javafx 'org.openjfx:javafx-controls:18.0.1:' + javaFxPlatform
 
-            jaxb group: 'jakarta.activation', name: 'jakarta.activation-api', version: '2.1.0'
-            jaxb group: 'org.eclipse.angus', name: 'angus-activation', version: '1.0.0'
-            jaxb group: 'jakarta.xml.bind', name: 'jakarta.xml.bind-api', version: '4.0.0'
-            jaxb group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '4.0.0'
+            jaxb 'jakarta.activation:jakarta.activation-api:2.1.0'
+            jaxb 'org.eclipse.angus:angus-activation:1.0.0'
+            jaxb 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
+            jaxb 'org.glassfish.jaxb:jaxb-runtime:4.0.0'
 
-            testFramework group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.8.2'
-            testFramework group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.8.2'
-            testFramework group: 'org.assertj', name: 'assertj-core', version: '3.23.1'
-            testFramework group: 'org.mockito', name: 'mockito-junit-jupiter', version: '4.6.1'
+            testFramework 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+            testFramework 'org.junit.jupiter:junit-jupiter-params:5.8.2'
+            testFramework 'org.assertj:assertj-core:3.23.1'
+            testFramework 'org.mockito:mockito-junit-jupiter:4.6.1'
 
-            testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.8.2'
-            testRuntimeOnly group: 'org.junit.platform', name: 'junit-platform-runner', version: '1.8.2'
-            testRuntimeOnly group: 'org.mockito', name: 'mockito-inline', version: '4.6.1'
+            testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+            testRuntimeOnly 'org.junit.platform:junit-platform-runner:1.8.2'
+            testRuntimeOnly 'org.mockito:mockito-inline:4.6.1'
         }
 
         ext {
@@ -244,7 +244,7 @@ allprojects {
         apply plugin: 'net.ltgt.errorprone'
 
         dependencies {
-            errorprone group: 'com.google.errorprone', name: 'error_prone_core', version: '2.14.0'
+            errorprone 'com.google.errorprone:error_prone_core:2.14.0'
         }
 
         // configuring Spotbugs
@@ -291,8 +291,8 @@ allprojects {
 
         plugins.withType(GroovyPlugin) {
             dependencies {
-                implementation group: 'org.codehaus.groovy', name: 'groovy-all', version: '4.0.2'
-                testFramework group: 'org.spockframework', name: 'spock-core', version: '2.1-groovy-3.0'
+                implementation 'org.codehaus.groovy:groovy-all:4.0.2'
+                testFramework 'org.spockframework:spock-core:2.1-groovy-3.0'
             }
         }
 
