--- a/config/build.gradle
+++ b/config/build.gradle
@@ -25,7 +25,7 @@
 dependencies {
     api project(':tweetwallfx-utility')
 
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
+    implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
 }
 
 tasks.named('test') {
