--- a/controls/build.gradle
+++ b/controls/build.gradle
@@ -23,8 +23,8 @@
  */
 
 dependencies {
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
-    implementation group: 'com.github.mfornos', name: 'humanize-slim', version: '1.2.2'
+    implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
+    implementation 'com.github.mfornos:humanize-slim:1.2.2'
     implementation project(':tweetwallfx-core')
     implementation project(':tweetwallfx-stepengine-dataproviders')
     implementation project(':tweetwallfx-transitions')
