--- a/core/build.gradle
+++ b/core/build.gradle
@@ -23,11 +23,11 @@
  */
 
 dependencies {
-    api group: 'de.jensd', name: 'fontawesomefx-commons', version: '11.0'
-    api group: 'de.jensd', name: 'fontawesomefx-fontawesome', version: '4.7.0-11'
+    api 'de.jensd:fontawesomefx-commons:11.0'
+    api 'de.jensd:fontawesomefx-fontawesome:4.7.0-11'
     api project(':tweetwallfx-configuration')
     api project(':tweetwallfx-tweet-api')
 
-    implementation group: 'com.vdurmont', name: 'emoji-java', version: '5.1.1'
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.2'
+    implementation 'com.vdurmont:emoji-java:5.1.1'
+    implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
 }
