--- a/devoxx-api-cfp/build.gradle
+++ b/devoxx-api-cfp/build.gradle
@@ -24,12 +24,12 @@
 
 dependencies {
     api project(':tweetwallfx-utility')
-    api group: 'jakarta.ws.rs', name: 'jakarta.ws.rs-api', version: '3.1.0'
+    api 'jakarta.ws.rs:jakarta.ws.rs-api:3.1.0'
 
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
+    implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
 
-    runtimeOnly group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '3.0.4'
-    runtimeOnly group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '3.0.4'
-    runtimeOnly group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '3.0.4'
-    runtimeOnly group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.13.3'
+    runtimeOnly 'org.glassfish.jersey.core:jersey-client:3.0.4'
+    runtimeOnly 'org.glassfish.jersey.inject:jersey-hk2:3.0.4'
+    runtimeOnly 'org.glassfish.jersey.media:jersey-media-json-jackson:3.0.4'
+    runtimeOnly 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.3'
 }
