--- a/devoxx-cfp-stepengine/build.gradle
+++ b/devoxx-cfp-stepengine/build.gradle
@@ -22,10 +22,10 @@
  * THE SOFTWARE.
  */
 dependencies {
-    api group: 'de.jensd', name: 'fontawesomefx-commons', version: '11.0'
-    api group: 'de.jensd', name: 'fontawesomefx-fontawesome', version: '4.7.0-11'
+    api 'de.jensd:fontawesomefx-commons:11.0'
+    api 'de.jensd:fontawesomefx-fontawesome:4.7.0-11'
 
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
+    implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
     implementation project(':tweetwallfx-controls')
     implementation project(':tweetwallfx-devoxx-api-cfp')
     implementation project(':tweetwallfx-stepengine-dataproviders')
