--- a/devoxx-cfp-test/build.gradle
+++ b/devoxx-cfp-test/build.gradle
@@ -26,6 +26,6 @@ configurations {
 }
 
 dependencies {
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
+    implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
     implementation project(':tweetwallfx-devoxx-api-cfp')
 }
