--- a/filterchain/build.gradle
+++ b/filterchain/build.gradle
@@ -25,5 +25,5 @@
 dependencies {
     api project(':tweetwallfx-configuration')
 
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
+    implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
 }
