--- a/generic2d/build.gradle
+++ b/generic2d/build.gradle
@@ -23,7 +23,7 @@
  */
 
 dependencies {
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.2'
+    implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
     implementation project(':tweetwallfx-2d')
     implementation project(':tweetwallfx-core')
     implementation project(':tweetwallfx-tweet-api')
