--- a/tweet-api/build.gradle
+++ b/tweet-api/build.gradle
@@ -22,6 +22,6 @@
  * THE SOFTWARE.
  */
 dependencies {
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
+    implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
     implementation project(':tweetwallfx-filterchain')
 }
