--- a/util/build.gradle
+++ b/util/build.gradle
@@ -23,6 +23,6 @@
  */
 
 dependencies {
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.3'
+    implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
 }
