--- a/.github/workflows/dependecyUpdates.yml
+++ b/.github/workflows/dependecyUpdates.yml
@@ -52,3 +52,17 @@ jobs:
           name: dependencyUpdates results
           path: build/dependencyUpdates/
           retention-days: 3
+
+      # Run dependency-analysis task
+      - name: Run dependency-analysis task
+        uses: gradle/gradle-build-action@v2.2.2
+        with:
+          arguments: --no-daemon --refresh-dependencies buildHealth
+
+      # Store dependency-analysis result files
+      - name: Store dependency-analysis result files
+        uses: actions/upload-artifact@v3
+        with:
+          name: dependency-analysis results
+          path: build/reports/dependency-analysis/
+          retention-days: 3
