--- a/devoxx-cfp-stepengine/build.gradle
+++ b/devoxx-cfp-stepengine/build.gradle
@@ -22,12 +22,12 @@
  * THE SOFTWARE.
  */
 dependencies {
-    api 'de.jensd:fontawesomefx-commons:11.0'
-    api 'de.jensd:fontawesomefx-fontawesome:4.7.0-11'
+    api project(':tweetwallfx-devoxx-api-cfp')
 
+    implementation 'de.jensd:fontawesomefx-commons:11.0'
+    implementation 'de.jensd:fontawesomefx-fontawesome:4.7.0-11'
     implementation 'org.apache.logging.log4j:log4j-api:2.18.0'
     implementation project(':tweetwallfx-controls')
-    implementation project(':tweetwallfx-devoxx-api-cfp')
     implementation project(':tweetwallfx-stepengine-dataproviders')
     implementation project(':tweetwallfx-transitions')
 }
