--- a/devoxx-cfp-test/build.gradle
+++ b/devoxx-cfp-test/build.gradle
@@ -26,6 +26,7 @@ configurations {
 }
 
 dependencies {
+    api project(':tweetwallfx-devoxx-api-cfp')
+
     implementation 'org.apache.logging.log4j:log4j-api:2.18.0'
-    implementation project(':tweetwallfx-devoxx-api-cfp')
 }
