--- a/google-cloud/build.gradle
+++ b/google-cloud/build.gradle
@@ -23,10 +23,10 @@
  */
 
 dependencies {
+    api project(':tweetwallfx-tweet-api')
+
     implementation 'com.google.auth:google-auth-library-oauth2-http:1.8.1'
     implementation 'com.google.cloud:google-cloud-vision:3.0.1'
     implementation 'org.apache.logging.log4j:log4j-api:2.18.0'
     implementation project(':tweetwallfx-cache')
-    implementation project(':tweetwallfx-filterchain')
-    implementation project(':tweetwallfx-tweet-api')
 }
