--- a/.github/workflows/gradleBuild.yml
+++ b/.github/workflows/gradleBuild.yml
@@ -77,3 +77,12 @@ jobs:
             **/*.jfr
             **/hs_err_pid*.log
             **/build/reports/*
+
+      # Run publish task
+      - name: Run publish task
+        if: ${{ (matrix.jdk == '17') && (github.event_name == 'push') && success() }}
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: --no-daemon --warning-mode all publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
