--- a/emoji/build.gradle
+++ b/emoji/build.gradle
@@ -23,12 +23,7 @@
  */
 
 dependencies {
-    implementation 'com.github.mfornos:humanize-slim:1.2.2'
-    implementation 'de.jensd:fontawesomefx-commons:11.0'
-    implementation 'de.jensd:fontawesomefx-fontawesome:4.7.0-11'
+    api project(':tweetwallfx-cache')
     implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
-    implementation project(':tweetwallfx-core')
-    implementation project(':tweetwallfx-emoji')
-    implementation project(':tweetwallfx-stepengine-dataproviders')
-    implementation project(':tweetwallfx-transitions')
+    implementation 'com.vdurmont:emoji-java:5.1.1'
 }
