Switch from Log4j to Slf4j
Signed-off-by: Patrick Reinhart <patrick@reini.net>

--- a/emoji/build.gradle
+++ b/emoji/build.gradle
@@ -24,6 +24,6 @@
 
 dependencies {
     api project(':tweetwallfx-cache')
-    implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
+    implementation 'org.slf4j:slf4j-api:2.0.3'
     implementation 'com.vdurmont:emoji-java:5.1.1'
 }
