--- a/2d/build.gradle
+++ b/2d/build.gradle
@@ -23,7 +23,7 @@
  */
 
 dependencies {
-    implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
+    implementation 'org.slf4j:slf4j-api:2.0.3'
     implementation project(':tweetwallfx-configuration')
     implementation project(':tweetwallfx-controls')
 }
