--- a/config/build.gradle
+++ b/config/build.gradle
@@ -25,7 +25,7 @@
 dependencies {
     api project(':tweetwallfx-utility')
 
-    implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
+    implementation 'org.slf4j:slf4j-api:2.0.3'
 }
 
 tasks.named('test') {
