--- a/core/build.gradle
+++ b/core/build.gradle
@@ -24,6 +24,6 @@
 
 dependencies {
     implementation 'com.vdurmont:emoji-java:5.1.1'
-    implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
+    implementation 'org.slf4j:slf4j-api:2.0.3'
     implementation project(':tweetwallfx-configuration')
 }
