--- a/filterchain/build.gradle
+++ b/filterchain/build.gradle
@@ -25,5 +25,5 @@
 dependencies {
     api project(':tweetwallfx-configuration')
 
-    implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
+    implementation 'org.slf4j:slf4j-api:2.0.3'
 }
