--- a/google-cloud/build.gradle
+++ b/google-cloud/build.gradle
@@ -27,6 +27,6 @@ dependencies {
 
     implementation 'com.google.auth:google-auth-library-oauth2-http:1.11.0'
     implementation 'com.google.cloud:google-cloud-vision:3.1.3'
-    implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
+    implementation 'org.slf4j:slf4j-api:2.0.3'
     implementation project(':tweetwallfx-cache')
 }
