--- a/stepengine-dataproviders/build.gradle
+++ b/stepengine-dataproviders/build.gradle
@@ -27,5 +27,5 @@ dependencies {
     api project(':tweetwallfx-stepengine-api')
 
     implementation 'com.github.spotbugs:spotbugs-annotations:4.7.2'
-    implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
+    implementation 'org.slf4j:slf4j-api:2.0.3'
 }
