--- a/tweet-api/build.gradle
+++ b/tweet-api/build.gradle
@@ -24,5 +24,5 @@
 dependencies {
     api project(':tweetwallfx-filterchain')
 
-    implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
+    implementation 'org.slf4j:slf4j-api:2.0.3'
 }
