--- a/util/build.gradle
+++ b/util/build.gradle
@@ -23,6 +23,6 @@
  */
 
 dependencies {
-    implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
+    implementation 'org.slf4j:slf4j-api:2.0.3'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4'
 }
